--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "npx eslint ."
   },
   "keywords": [],
-  "author": "",
+  "author": "donik",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.41.0",
