--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "debug": "node --inspect app.js"
   },
   "keywords": [],
   "author": "donik",
@@ -18,8 +19,12 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.2",
+    "validator": "^13.9.0"
   }
 }
